# application

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Jamfile.v2  README.md  index.html
cmake/: FindBoostApplication.cmake
example/: CMakeLists.txt  application_mode_select.cpp  handling_errors_ec_version.cpp  handling_errors_ex_version.cpp  limit_single_instance.cpp  limit_single_instance_boost_interprocess_named_mutex.cpp  limit_single_instance_callback.cpp  limit_single_instance_callback_with_global_context.cpp  my_own_termination_handler.cpp  my_own_wait_for_termination_request.cpp  myexception.cpp  path.cpp  pid.cpp  simple_application.cpp  simple_application_with_global_context.cpp  simple_server_application.cpp  simple_server_application_help.cpp  simple_server_application_with_auto_handler.cpp  simple_server_application_with_auto_handler_and_global_context.cpp  termination_handler.cpp  termination_handler_with_global_context.cpp  test.cpp  wait_for_termination_request.cpp
example/new_application_mode/: apache_httpd.cpp  apache_httpd_mode.hpp
example/selfpipe/: selfpipe.cpp
example/setup/: initializers.hpp
example/setup/windows/: setup.cpp
example/setup/windows/setup/: service_setup.hpp
example/tutorial/: main_stage1.cpp  main_stage2.cpp  main_stage3.cpp  main_stage4.cpp  myfunctor_stage1.hpp  myfunctor_stage2.hpp  myfunctor_stage3.hpp  myfunctor_stage4.hpp
example/work_queue/: work_queue.cpp  work_queue.hpp
include/boost/: application.hpp
include/boost/application/: application_mode_register.hpp  aspect_map.hpp  auto_app.hpp  auto_handler.hpp  base_type.hpp  common_application.hpp  config.hpp  context.hpp  handler.hpp  launch.hpp  server_application.hpp  signal_binder.hpp  system_error.hpp  version.hpp
include/boost/application/aspects/: args.hpp  limit_single_instance.hpp  path.hpp  pause_handler.hpp  process_id.hpp  resume_handler.hpp  run_mode.hpp  selfpipe.hpp  status.hpp  termination_handler.hpp  wait_for_termination_request.hpp
include/boost/application/detail/: application_impl.hpp  csbl.hpp  ensure_single_instance.hpp
include/boost/application/detail/posix/: common_application_impl.hpp  limit_single_instance_impl.hpp  path_impl.hpp  process_id_impl.hpp  server_application_impl.hpp  wait_for_termination_request_impl.hpp
include/boost/application/detail/windows/: common_application_impl.hpp  limit_single_instance_impl.hpp  path_impl.hpp  process_id_impl.hpp  server_application_impl.hpp  wait_for_termination_request_impl.hpp
test/: CMakeLists.txt  args_aspect_test.cpp  aspect_map_test.cpp  auto_app_test.cpp  auto_handler_global_context_test.cpp  auto_handler_test.cpp  ensure_single_instance_test.cpp  global_context_test.cpp  handler_test.cpp  launch_test.cpp  myapp.cpp  myapp.hpp  myexception_test.cpp  path_aspect_test.cpp  signal_binder_test.cpp  simple_common_application_test.cpp  simple_server_application_test.cpp  tunit_test.cpp
